# wa_plus

./: .env.example  .gitignore  Dockerfile  README.md  code.sh  docker-compose.yml  entrypoint.sh  generate_postman_collection.py  gunicorn_conf.py  postman_collection.json  pyproject.toml  test_user_service_eager_loading.py
alembic/: env.py
app/: .env  __init__.py  main.py  pyproject.toml
app/api/v1/: api_router_v1.py  permissions.py
app/api/v1/endpoints/: auth.py  data_exploration.py  exports.py  financial_data.py  land_and_agriculture.py  map_layers.py  metadata_catalog.py  summary_data.py  timeseries.py  unit_of_measurement_category.py
app/api/v1/endpoints/admin/: roles.py  users.py
app/apps/user_management/: models.py
app/apps/user_management/management/commands/: create_env_superuser.py
app/core/: config.py  urls.py
app/dashboard/: dashboard_router.py  dashboard_service.py
app/database/: session.py
app/database/models/: __init__.py  base_model.py  financial_account.py  indicator_definition.py  indicator_timeseries.py  infrastructure.py  infrastructure_type.py  operational_status_type.py  raster_metadata.py  reporting_unit.py  reporting_unit_type.py  role.py  role_permission.py  unit_of_measurement.py  user.py
app/dependencies/: __init__.py  get_current_user.py  get_db_session.py  rbac.py
app/schemas/: __init__.py  crop.py  indicator_definition.py  raster_metadata.py  reporting_unit.py  role.py  temporal_resolution.py  unit_of_measurement.py  user.py
app/scripts/: create_superuser.py  populate_data_test.py  populate_test_data.py  populate_user_test.py
app/security/: __init__.py
app/services/: __init__.py  auth_service.py  base_service.py  data_service.py  role_service.py  unit_of_measurement_category_service.py  user_service.py
app/services_external/: redis_client.py
app/tasks/: data_tasks.py
app/utils/: __init__.py  common_helpers.py
app/worker/: celery_app.py  tasks.py
deci_sgwa/src/: main.py  pyproject.toml
deci_sgwa/src/alembic/: env.py
deci_sgwa/src/alembic/versions/: 63003f2a15fa_initial_schema_vx.py
deci_sgwa/src/api/v1/: api_router_v1.py
deci_sgwa/src/api/v1/endpoints/: auth.py  data_exploration.py  exports.py  financial_data.py  land_and_agriculture.py  map_layers.py  metadata_catalog.py  summary_data.py  timeseries.py  unit_of_measurement_category.py
deci_sgwa/src/api/v1/endpoints/admin/: roles.py  users.py
deci_sgwa/src/app/: main.py
deci_sgwa/src/app/api/v1/: api_router_v1.py
deci_sgwa/src/app/api/v1/endpoints/: auth.py  data_exploration.py  exports.py  financial_data.py  land_and_agriculture.py  map_layers.py  metadata_catalog.py  summary_data.py  timeseries.py  unit_of_measurement_category.py
deci_sgwa/src/app/core/: config.py
deci_sgwa/src/app/database/: session.py
deci_sgwa/src/app/database/models/: crop.py  cropping_pattern.py  currency.py  indicator_category.py  infrastructure.py  temporal_resolution.py  unit_of_measurement_category.py  user.py
deci_sgwa/src/app/dependencies/: __init__.py  get_current_user.py  rbac.py
deci_sgwa/src/app/schemas/: base_schema.py  cropping_pattern.py  currency.py  data_quality_flag.py  financial_account.py  indicator_timeseries.py  infrastructure_type.py  operational_status_type.py  token.py  unit_of_measurement.py  unit_of_measurement_category.py
deci_sgwa/src/app/scripts/: populate_data_test.py
deci_sgwa/src/app/security/: hashing.py  token_utils.py
deci_sgwa/src/app/services/: __init__.py  base_service.py
deci_sgwa/src/app/services_external/: __init__.py
deci_sgwa/src/app/utils/: common_helpers.py
deci_sgwa/src/app/worker/: celery_app.py
deci_sgwa/src/data_ingestion/: loaders.py  pipeline.py
deci_sgwa/src/data_ingestion/parsers/: base_parser.py
deci_sgwa/src/database/: session.py
deci_sgwa/src/database/models/: __init__.py  data_quality_flag.py  financial_account.py  financial_account_type.py  indicator_definition.py  infrastructure_type.py  permission.py  reporting_unit.py  unit_of_measurement.py
deci_sgwa/src/dependencies/: get_current_user.py  get_db_session.py  rbac.py
deci_sgwa/src/schemas/: __init__.py  basin.py  financial_account_type.py  indicator_category.py  infrastructure.py  map_layer.py  permission.py  user.py
deci_sgwa/src/scripts/: create_superuser.py  populate_data_test.py
deci_sgwa/src/security/: token_utils.py
deci_sgwa/src/services/: auth_service.py  base_service.py  data_service.py  export_service.py  role_service.py  unit_of_measurement_category_service.py  user_service.py
deci_sgwa/src/services_external/: redis_client.py
deci_sgwa/src/settings/: config.py
deci_sgwa/src/tasks/: data_tasks.py
deci_sgwa/src/tests/: conftest.py
deci_sgwa/src/tests/unit/core/: test_config.py
deci_sgwa/src/utils/: __init__.py
deci_sgwa/src/worker/: celery_app.py  tasks.py
(+56 files in other folders)
